--- a/index.html
+++ b/index.html
@@ -241,13 +241,15 @@
         <div class="portfolio__container bd-grid">
 
             <div class="portfolio__content">
-                <a href="#"><img src="assets/img/seascape.png" alt="" class="portfolio__img"></a>
+                <a href="https://elated-dijkstra-57535f.netlify.app/#" target="__blank"><img src="assets/img/one.png"
+                        alt="" class="portfolio__img"></a>
                 <div class="portfolio__data">
                     <span class="portfolio__subtitle">HTML & CSS</span>
-                    <a href="https://frosty-haibt-af88eb.netlify.app/" target="_blank">
-                        <h2 class="portfolio__title">Seascape</h2>
+                    <a href="https://elated-dijkstra-57535f.netlify.app/#" target="_blank">
+                        <h2 class="portfolio__title">Videographer</h2>
                     </a>
-                    <a href="https://github.com/jjasmiine/Seascape" target="_blank" class="button button-link">Repo</a>
+                    <a href="https://github.com/jjasmiine/videographer" target="_blank"
+                        class="button button-link">Repo</a>
                 </div>
             </div>
 
@@ -263,13 +265,14 @@
             </div>
 
             <div class="portfolio__content">
-                <a href="#"><img src="assets/img/dope.png" alt="" class="portfolio__img"></a>
+                <a href="https://focused-wilson-82ebb3.netlify.app/" target="__blank"><img src="assets/img/two.png"
+                        alt="" class="portfolio__img"></a>
                 <div class="portfolio__data">
                     <span class="portfolio__subtitle">HTML & CSS</span>
-                    <a href="https://modest-montalcini-3b8d58.netlify.app/" target="_blank">
-                        <h2 class="portfolio__title">Dope Hosting</h2>
+                    <a href="https://focused-wilson-82ebb3.netlify.app/" target="_blank">
+                        <h2 class="portfolio__title">Art</h2>
                     </a>
-                    <a href="https://github.com/jjasmiine/Dope-Hosting" target="_blank"
+                    <a href="https://github.com/jjasmiine/purp-glassmorphism" target="_blank"
                         class="button button-link">Repo</a>
                 </div>
             </div>
